@@ -202,7 +202,7 @@ static void do_director_status(UAContext *ua, char *cmd)
    bsendmsg(ua, _("Daemon started %s, %d Job%s run.\n"), dt, last_job.NumJobs,
         last_job.NumJobs == 1 ? "" : "s");
    if (last_job.NumJobs > 0) {
-      char termstat[30];
+      char termstat[50];
 
       bstrftime(dt, sizeof(dt), last_job.end_time);
       bsendmsg(ua, _("Last Job %s finished at %s\n"), last_job.Job, dt);
